--- a/hfas_cadets/android/app/build.gradle
+++ b/hfas_cadets/android/app/build.gradle
@@ -45,11 +45,35 @@ android {
         versionName flutterVersionName
     }
 
+    signingConfigs {
+        release {
+            storeFile file('key.jks')
+            storePassword 'password'
+            keyAlias 'androiddebugkey'
+            keyPassword 'password'
+        }
+    }
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
+            signingConfig signingConfigs.release
+        }
+    }
+
+    signingConfigs {
+        debug {
+            storeFile file('key.jks')
+            storePassword 'flutter11'
+            keyAlias 'androiddebugkey'
+            keyPassword 'flutter11'
+        }
+    }
+
+    buildTypes {
+        debug {
             signingConfig signingConfigs.debug
+        }
+        release {
+            signingConfig signingConfigs.release
         }
     }
 }
