--- a/hfas_cadets/pubspec.yaml
+++ b/hfas_cadets/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_core: ^0.4.5
   google_sign_in: ^4.5.1
   provider: ^4.1.3
+  simple_animations: ^2.2.1
 
 dev_dependencies:
   flutter_test:
@@ -50,9 +51,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
