--- a/hfas_cadets/pubspec.yaml
+++ b/hfas_cadets/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   google_sign_in: ^4.5.1
   provider: ^4.1.3
   simple_animations: ^2.2.1
+  flutter_spinkit: ^4.1.2+1
 
 dev_dependencies:
   flutter_test:
