--- a/hfas_cadets/pubspec.yaml
+++ b/hfas_cadets/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   provider: ^4.1.3
   simple_animations: ^2.2.1
   flutter_spinkit: ^4.1.2+1
+  curved_navigation_bar: ^0.3.3
 
 dev_dependencies:
   flutter_test:
