--- a/hfas_cadets/pubspec.yaml
+++ b/hfas_cadets/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   simple_animations: ^2.2.1
   flutter_spinkit: ^4.1.2+1
   image_cropper: ^1.2.3
+  shared_preferences: ^0.5.7+2
   image_picker: ^0.6.7+4 #needs configuration for iOS
 
 dev_dependencies:
