--- a/hfas_cadets/android/app/src/main/AndroidManifest.xml
+++ b/hfas_cadets/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="hfascadets"
+        android:label="HFAS Cadets"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
