--- a/hfas_cadets/ios/Runner/Info.plist
+++ b/hfas_cadets/ios/Runner/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string>HFAS Cadets</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -22,6 +24,12 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>hfascadets needs access to your camera</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>hfascadets needs access to your microphone</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>hfascadets needs access to your camera roll</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -41,11 +49,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>hfascadets needs access to your camera roll</string>
-	<key>NSCameraUsageDescription</key>
-	<string>hfascadets needs access to your camera</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>hfascadets needs access to your microphone</string>
 </dict>
 </plist>
