--- a/hfas_cadets/pubspec.yaml
+++ b/hfas_cadets/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   flutter_spinkit: ^4.1.2+1
   image_cropper: ^1.2.3
   shared_preferences: ^0.5.7+2
-  image_picker: ^0.6.7+4 #needs configuration for iOS
+  image_picker: ^0.6.7+4
+  custom_refresh_indicator: ^0.8.0+1
 
 dev_dependencies:
   flutter_test:
