--- a/hfas_cadets/pubspec.yaml
+++ b/hfas_cadets/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^0.5.7+2
   image_picker: ^0.6.7+4
   custom_refresh_indicator: ^0.8.0+1
+  numberpicker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
